[project]
name = "pulumi-aws-vpc"
version = "0.1.0"
description = "Pulumi AWS VPC native Python reusable resource"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netaddr>=1.3.0",
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.2",
    "pulumi-aws-native>=1.26.0",
    "pydantic>=2.10.0",
    "typing-extensions>=4.12.2",
]


[dependency-groups]
dev = [
    "bpython>=0.24",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.1",
    "pyyaml>=6.0.2",
    "mypy>=1.15.0",
    "types-netaddr>=1.3.0.20240530",
    "ty>=0.0.0a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
allow_redefinition = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
